--- a/urunler.html
+++ b/urunler.html
@@ -5,17 +5,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Ödev 1</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
-  <nav class="nav bg-dark">
-    <a class="nav-link text-danger fw-bold" href="index.html">LOGO</a>
-    <a class="nav-link text-white" href="index.html">Ana Sayfa</a>
-    <a class="nav-link text-white" href="urunler.html">Ürünlerimiz</a>
-    <a class="nav-link text-white" href="hakkimizda.html">Hakkımızda</a>
+  <nav class="nav bg-dark align-items-center">
+    <a class="nav-link text-danger fw-bold fs-4" href="index.html">LOGO</a>
+    <a class="nav-link text-secondary" href="index.html">Ana Sayfa</a>
+    <a class="nav-link text-secondary" href="urunler.html">Ürünlerimiz</a>
+    <a class="nav-link text-secondary" href="hakkimizda.html">Hakkımızda</a>
   </nav>
   <div class="container">
     <h1 class="text-center my-4">ÜRÜN GALERİSİ</h1>
@@ -27,8 +28,8 @@
             class="card-img-top" alt="Nike Streakfly">
           <div class="card-body">
             <h5 class="card-title">Nike Streakfly</h5>
-            <p class="card-text">Yol Yarış Ayakkabısı</p>
-            <p class="card-text">2 Renk</p>
+            <p class="card-text text-secondary">Yol Yarış Ayakkabısı</p>
+            <p class="card-text text-secondary">2 Renk</p>
             <span>2.699.90 TL</span>
           </div>
         </div>
@@ -40,8 +41,8 @@
             class="card-img-top" alt="Nike Zegama">
           <div class="card-body">
             <h5 class="card-title">Nike Zegama</h5>
-            <p class="card-text">Arazi Tipi Erkek Koşu Ayakkabısı</p>
-            <p class="card-text">4 Renk</p>
+            <p class="card-text text-secondary">Arazi Tipi Erkek Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">4 Renk</p>
             <span>3.799.90 TL</span>
           </div>
         </div>
@@ -53,8 +54,8 @@
             class="card-img-top" alt="Nike Alphafly 2">
           <div class="card-body">
             <h5 class="card-title">Nike Alphafly 2</h5>
-            <p class="card-text">Erkek Yol Yarış Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Yarış Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>6.599.90 TL</span>
           </div>
         </div>
@@ -66,8 +67,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
@@ -79,8 +80,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
@@ -92,8 +93,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
@@ -105,8 +106,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
@@ -118,8 +119,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
@@ -131,8 +132,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
@@ -144,8 +145,8 @@
             class="card-img-top" alt="Ürün 1">
           <div class="card-body">
             <h5 class="card-title">Nike Pegasus 40 SE</h5>
-            <p class="card-text">Erkek Yol Koşu Ayakkabısı</p>
-            <p class="card-text">1 Renk</p>
+            <p class="card-text text-secondary">Erkek Yol Koşu Ayakkabısı</p>
+            <p class="card-text text-secondary">1 Renk</p>
             <span>3.599.90 TL</span>
           </div>
         </div>
