--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -5,19 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Ödev 1</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
-    <nav class="nav bg-dark">
-        <a class="nav-link text-danger fw-bold" href="index.html">LOGO</a>
-        <a class="nav-link text-white" href="index.html">Ana Sayfa</a>
-        <a class="nav-link text-white" href="urunler.html">Ürünlerimiz</a>
-        <a class="nav-link text-white" href="hakkimizda.html">Hakkımızda</a>
+    <nav class="nav bg-dark align-items-center">
+        <a class="nav-link text-danger fw-bold fs-4" href="index.html">LOGO</a>
+        <a class="nav-link text-secondary" href="index.html">Ana Sayfa</a>
+        <a class="nav-link text-secondary" href="urunler.html">Ürünlerimiz</a>
+        <a class="nav-link text-secondary" href="hakkimizda.html">Hakkımızda</a>
       </nav>
     <main>
       <section class="container bg-white text-center my-4">
+        <h1>HAKKIMIZDA</h1>
         <p class="my-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam corporis dolor molestias repudiandae. Facilis nostrum unde voluptatum aliquid, dignissimos iure debitis quam totam asperiores temporibus porro et minima esse!
         Maxime aut non debitis quas adipisci tenetur reiciendis fugit molestias voluptates illum, ipsa, assumenda praesentium neque corrupti numquam quis cum? Tempore voluptas quam debitis natus aut labore, cupiditate ullam voluptate?</p>
         <h1 class="my-4">VİZYONUMUZ</h1>
