--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Ödev 1</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
-    <nav class="nav bg-dark">
-        <a class="nav-link text-danger fw-bold" href="index.html">LOGO</a>
-        <a class="nav-link text-white" href="index.html">Ana Sayfa</a>
-        <a class="nav-link text-white" href="urunler.html">Ürünlerimiz</a>
-        <a class="nav-link text-white" href="hakkimizda.html">Hakkımızda</a>
+    <nav class="nav bg-dark align-items-center">
+        <a class="nav-link text-danger fw-bold fs-4" href="index.html">LOGO</a>
+        <a class="nav-link text-secondary" href="index.html">Ana Sayfa</a>
+        <a class="nav-link text-secondary" href="urunler.html">Ürünlerimiz</a>
+        <a class="nav-link text-secondary" href="hakkimizda.html">Hakkımızda</a>
     </nav>
     <section>
         <div class="p-5 mb-4 bg-light rounded-3 text-center">
             <div class="container-fluid py-4">
-                <h1 class="fw-bold">Merhaba <br>Mağazamıza Hoş Gelsiniz</h1>
+                <h1 class="fw-bold">Merhaba <br>Mağazamıza Hoş Geldiniz</h1>
                 <p class=" fs-4 text-center mt-4 mb-4">Mağazamızda her türlü koşu ve sporcu ayakkabısı bulabilirsiniz.
                     Mağazamızda çoğunlukla Nike ürünlerine yer verilmiştir. Dilerseniz bizim <a
                         href="hakkimizda.html">hakkımızda</a> detaylı bilgiye link üzerinden erişebilirsiniz. </p>
